--- a/robStyle.css
+++ b/robStyle.css
@@ -44,6 +44,18 @@ body{
     width: 100%;
     margin: 15px 0;
   }
+  .quart {
+    background: #f9f9f9;
+    height: 20%;  
+    width: 100%;
+    margin: 15px 0;
+  }
+  .balance {
+    background: #f9f9f9;
+    height: 80%;  
+    width: 100%;
+    margin: 15px 0;
+  }
 
 .title-format{
     color: royalblue; 
@@ -58,5 +70,11 @@ body{
 }
 h1{
      color: rgb(157, 157, 197); font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; font-size: medium;
+}
+.biomain{
+    color: darkblue; font-style: normal;font-family: Verdana, Geneva, Tahoma, sans-serif;font-size: medium; 
+}
+.biohead{
+    color: darkblue; font-style: normal;font-family: Verdana, Geneva, Tahoma, sans-serif;font-size: large;
 }
 
